# voice-ui

./: .clineignore  .coveragerc  .flake8  .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  python-app.yml
docs/: diagram.pu
examples/: 01_vad_basics.py  01_vad_microphone.py  01_vad_microphone_hotword_detection.py  01b_vad_with_hotword.py  02_simple_speech_detection_from_mic_stream.py  02b_speech_detection_webrtc.py  03_speech_detection_with_transcription.py  03_transcription_local.py  03b_transcription_webrtc.py  04_voiceui_local.py  04_voiceui_real_time_communication.py  04b_voiceui_webrtc.py  05_realtime_api_basics.py  05b_realtime_api_with_vad.py  real_time_communication.py  real_time_communication_rt_api.py  real_time_communication_rt_api_server_vad.py  simple_speech_detection_from_mic_stream.py  speech_detection_with_transcription.py  webrtc_sender.html
memory-bank/: activeContext.md  copilot-instructions.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: integrated_test_hotword_detector.py  integrated_test_speech_detector.py  integrated_test_tts_streamer.py  test_audio_source_base_and_factory.py  test_config.py  test_factories.py  test_google_speech_recognition.py  test_google_text_to_speech_streamer.py  test_google_tts_queued_player.py  test_hotword_detector.py  test_microphone.py  test_openai_local_whisper.py  test_openai_whisper.py  test_pass_through.py  test_player.py  test_queued_player_and_remote_more.py  test_remote_microphone_and_vad_injection.py  test_snowboy_hotword_detector.py  test_speaker_profile_manager.py  test_speech_detector.py  test_speech_recognition.py  test_text_to_speech_streamer.py  test_vad_factory.py  test_vad_funasr.py  test_vad_microphone.py  test_vad_picovoice.py  test_vad_silero.py  test_voice_ui.py  test_voice_ui_tts_thread.py  test_webrtc_factory_and_remote_microphone.py  test_webrtc_remote_microphone.py  test_webrtc_remote_player.py  test_webrtc_signaling_server.py  test_whisper_text_to_speech_streamer.py
tests/functional/: test_audio_pipeline.py  test_smoke_examples.py
tests/helpers/: audio_utils.py
tools/: README.md  generate_hotword_resources.py
voice_ui/: __init__.py  config.py  voice_ui.py
voice_ui/alternatives/: google_speech_recognition.py  google_tts.py  snowboy_hotword_detector.py
voice_ui/audio_io/: __init__.py  audio_data.py  audio_sink.py  audio_sink_factory.py  audio_source.py  player.py  (+11 more)
(+27 files in other folders)
