[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-ui"
version = "0.0.1"
dependencies = [
  "colorama",
  "openai",
  "pvcobra",
  "pveagle",
  "pvporcupine",
  "pvrecorder",
  "pyaudio",
  "python-dotenv",
  "requests",
  "six",
  "google-cloud-speech",
  "sox",
]
requires-python = ">=3.8"
authors = [
  {name = "Anderson Silva", email = "andyluiz@yahoo.com"},
]
maintainers = [
  {name = "Anderson Silva", email = "andyluiz@yahoo.com"}
]
description = "Voice UI supporting transcription, real-time exchange and speech interruption. This is meant to enable voice support to applications using large language models."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["voice", "UI", "LLM"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
]
